--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hanan Baltna</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Hamburger Menu -->
-    <div class="hamburger-menu" onclick="toggleNav()">
+    <div class="hamburger" onclick="toggleNav()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
@@ -24,53 +25,52 @@
 
     <header>
         <h1>Hanan Baltna</h1>
-        <p>Premium Products Delivered to You</p>
+        <p>Premium Products & Services</p>
     </header>
 
-    <div class="container">
-        <!-- Existing content remains same -->
-        <div class="announcement" id="announcement"></div>
+    <main class="container">
+        <section class="announcement" id="announcement">
+            <!-- Dynamic content loaded by JS -->
+        </section>
 
-        <div class="gallery">
-            <img src="product1.png" width = "400px"; height = "auto">
-            <img src="product2.png" width = "400px"; height = "auto">
-            <img src="product3.png" width = "400px"; height = "auto">
-        </div>
+        <section class="gallery">
+            <img src="product1.jpg" alt="Product 1">
+            <img src="product2.jpg" alt="Product 2">
+            <img src="product3.jpg" alt="Product 3">
+        </section>
 
-        <form class="order-form" id="orderForm">
+        <section class="order-form">
             <h2>Place Your Order</h2>
-            <div class="form-group">
-                <label>Name:</label>
-                <input type="text" placeholder="Your name" required>
-            </div>
-            <div class="form-group">
-                <label>Phone Number:</label>
-                <input type="tel" placeholder="Your phone number" required>
-            </div>
-            <div class="form-group">
-                <label>Order Details:</label>
-                <textarea placeholder="Type your order here..." rows="4" required></textarea>
-            </div>
-            <button type="submit">Place Order</button>
-        </form>
+            <form id="orderForm">
+                <div class="form-group">
+                    <input type="text" placeholder="Full Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" placeholder="Phone Number" required>
+                </div>
+                <div class="form-group">
+                    <textarea placeholder="Order Details..." rows="4" required></textarea>
+                </div>
+                <button type="submit">Submit Order</button>
+            </form>
+        </section>
 
-        <div class="contact-info">
+        <section class="contact-info">
             <h2>Contact Us</h2>
-            <p>Call us: 
-                <a href="tel:+251911064395">+251911064395</a><br>
-                <a href="tel:+251913734466">+251913734466</a>
-            </p>
+            <div class="phone-numbers">
+                <a href="tel:+1234567890">+123 456 7890</a>
+                <a href="tel:+0987654321">+098 765 4321</a>
+            </div>
             <div class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-telegram"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
             <div class="address">
-                <p>Visit us at: Alem_Bank Near To Ali Mosque</p>
-                <p>አድራሻ ፡  አለምባንክ አሊ መስጂድ 400ሜ ገባብሎ እንገኞለን። </p>
+                <p>123 Business Street<br>Your City, Country</p>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
