--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <header>
         <h1>Hanan Baltna</h1>
+        <h1>ሀናን ባልትና</h1>
         <p>Premium Products & Services</p>
     </header>
 
@@ -58,16 +59,17 @@
         <section class="contact-info">
             <h2>Contact Us</h2>
             <div class="phone-numbers">
-                <a href="tel:+1234567890">+123 456 7890</a>
-                <a href="tel:+0987654321">+098 765 4321</a>
+                 <a href="tel:+251911064395">+251911064395</a><br>
+                <a href="tel:+251913734466">+251913734466</a>
             </div>
             <div class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="t.me/hananbaltna"><i class="fab fa-telegram"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
             <div class="address">
-                <p>123 Business Street<br>Your City, Country</p>
+                <p>Visit us at: Alem_Bank Near To Ali Mosque</p>
+                <p>አድራሻ ፡  አለምባንክ አሊ መስጂድ 400ሜ ገባብሎ እንገኞለን። </p>
             </div>
         </section>
     </main>
