--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </section>
 
         <section class="gallery">
-            <img src="product1.jpg" alt="Product 1">
-            <img src="product2.jpg" alt="Product 2">
-            <img src="product3.jpg" alt="Product 3">
+<img src="product1.png" width = "400px"; height = "auto">
+            <img src="product2.png" width = "400px"; height = "auto">
+            <img src="product3.png" width = "400px"; height = "auto">
         </section>
 
         <section class="order-form">
