--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="t.me/hananbaltna"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/+251911064395"><i class="fab fa-whatsapp"></i></a>
             </div>
             <div class="address">
                 <p>Visit us at: Alem_Bank Near To Ali Mosque</p>
