--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="gallery">
-<img src="product1.png" width = "400px"; height = "auto">
+<img src="product1.png" width = "300px"; height = "auto">
             <img src="product2.png" width = "400px"; height = "auto">
             <img src="product3.png" width = "400px"; height = "auto">
         </section>
@@ -59,7 +59,7 @@
         <section class="contact-info">
             <h2>Contact Us</h2>
             <div class="phone-numbers">
-                 <a href="tel:+251911064395">+251911064395</a><br>
+                 <a href="tel:+251911064395">+251911064395</a>
                 <a href="tel:+251913734466">+251913734466</a>
             </div>
             <div class="social-media">
