--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
         <h1>Hanan Baltna</h1>
-        <h1>ሀናን ባልትና</h1>
+        <h1>ሀናን ባልትና</h1><br>
         <p>Premium Products & Services</p>
     </header>
 
