--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <h1>Hanan Baltna</h1>
         <h1>ሀናን ባልትና</h1><br>
-        <p>Premium Products & Services</p>
+        <p><font color="red"> Your #1 Premium Products & Services </font></p>
     </header>
 
     <main class="container">
