--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <!-- Hamburger Menu -->
-    <div class="hamburger" onclick="toggleNav()">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-    </div>
+<div class="hamburger" onclick="toggleNav()">
+    <div class="bar top-bar"></div>
+    <div class="bar middle-bar"></div>
+    <div class="bar bottom-bar"></div>
+</div>
 
     <!-- Side Navigation -->
     <nav class="sidenav" id="sidenav">
