--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <h1>Hanan Baltna</h1>
         <h1>ሀናን ባልትና</h1><br>
-        <p><font color="red"> <h4>Your #1 Premium Products & Services.</h4>h4> </font></p>
+        <p><font color="red"> <h4>Your #1 Premium Products & Services.</h4> </font></p>
     </header>
 
     <main class="container">
