--- a/index.html
+++ b/index.html
@@ -10,24 +10,18 @@
 <body>
     <!-- Hamburger Menu -->
     <div class="hamburger" onclick="toggleNav()">
-        <div class="bar top-bar"></div>
-        <div class="bar middle-bar"></div>
-        <div class="bar bottom-bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
     </div>
 
-   <!-- Remove the existing sidenav and update hamburger section -->
-<div class="hamburger" onclick="toggleNav()">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-</div>
-
-<nav class="dropdown-nav" id="dropdownNav">
-    <a href="#home" onclick="closeNav()">Home</a>
-    <a href="#products" onclick="closeNav()">Products</a>
-    <a href="#orderSection" onclick="closeNav()">Place Order</a>
-    <a href="#contact" onclick="closeNav()">Contact</a>
-</nav>
+    <!-- Dropdown Navigation -->
+    <nav class="dropdown-nav" id="dropdownNav">
+        <a href="#home" onclick="closeNav()">Home</a>
+        <a href="#products" onclick="closeNav()">Products</a>
+        <a href="#orderSection" onclick="closeNav()">Place Order</a>
+        <a href="#contact" onclick="closeNav()">Contact</a>
+    </nav>
 
     <header>
         <h1>Hanan Baltna</h1>
@@ -35,11 +29,11 @@
     </header>
 
     <main class="container">
-        <!-- Announcements -->
+        <!-- Announcement Section -->
         <section class="announcement" id="announcement"></section>
 
         <!-- Product Gallery -->
-        <section class="gallery">
+        <section class="gallery" id="products">
             <img src="product1.jpg" alt="Product 1">
             <img src="product2.jpg" alt="Product 2">
             <img src="product3.jpg" alt="Product 3">
@@ -64,7 +58,7 @@
         </section>
 
         <!-- Contact Information -->
-        <section class="contact-info">
+        <section class="contact-info" id="contact">
             <h2>Contact Us</h2>
             <div class="phone-numbers">
                 <a href="tel:+1234567890">+123 456 7890</a>
