--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
 
     <header>
         <h1>Hanan Baltna</h1>
-        <p>Premium Products & Services</p>
+        <h1>ሀናን ባልትና</h1><br>
+        <p><font color="red"> <h4>Your #1 Premium Products & Services.</h4> </font></p>
     </header>
-
     <main class="container">
         <!-- Announcement Section -->
         <section class="announcement" id="announcement"></section>
 
         <!-- Product Gallery -->
-        <section class="gallery" id="products">
-            <img src="product1.jpg" alt="Product 1">
-            <img src="product2.jpg" alt="Product 2">
-            <img src="product3.jpg" alt="Product 3">
+        <section class="gallery">
+<img src="product1.png" width = "400px"; height = "auto">
+            <img src="product2.png" width = "400px"; height = "auto">
+            <img src="product3.png" width = "400px"; height = "auto">
         </section>
-
         <!-- Order Form -->
         <section id="orderSection" class="order-form">
             <h2>Place Your Order</h2>
@@ -61,16 +60,17 @@
         <section class="contact-info" id="contact">
             <h2>Contact Us</h2>
             <div class="phone-numbers">
-                <a href="tel:+1234567890">+123 456 7890</a>
-                <a href="tel:+0987654321">+098 765 4321</a>
+                <a href="tel:+251911064395">+251911064395</a>
+                <a href="tel:+251913734466">+251913734466</a>
             </div>
             <div class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/+251911064395"><i class="fab fa-whatsapp"></i></a>
             </div>
             <div class="address">
-                <p>123 Business Street<br>Your City, Country</p>
+                <p>Visit us at: Alem_Bank Near To Ali Mosque</p>
+                <p>አድራሻ ፡  አለምባንክ አሊ መስጂድ 400ሜ ገባብሎ እንገኞለን። </p>
             </div>
         </section>
     </main>
