--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Order Form -->
         <section id="orderSection" class="order-form">
             <h2>Place Your Order</h2>
-            <form id="orderForm" action="https://formspree.io/f/https://formspree.io/f/mrbekdyq" method="POST">
+            <form id="orderForm" action="https://formspree.io/f/mrbekdyq" method="POST">
                 <input type="hidden" name="_replyto" value="hananbedru33@gmail.com">
                 <input type="hidden" name="_subject" value="New Order from Hanan Baltna Website">
                 <div class="form-group">
