--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <!-- Copyright Footer -->
     <footer class="copyright">
         <p>&copy; 2024 Hanan Baltna. All rights reserved.</p>
+        <img src="log1.png" width = "100px"; height = "auto">
     </footer>
 
     <script src="script.js"></script>
