--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </section>
         <!-- Order Form -->
         <section id="orderSection" class="order-form">
-            <h2>Place Your Order</h2>
+            <h2>Place Your Order Here</h2>
+            <h2>አዚህ ይዘዙን በጥራት እናዘጋጃለን።</h2>
             <form id="orderForm" action="https://formspree.io/f/mrbekdyq" method="POST">
                 <input type="hidden" name="_subject" value="New Order from Hanan Baltna">
                 <div class="form-group">
