--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
         <h1>Hanan Baltna</h1>
-        <img src="log1.png" width = "200px"; height = "auto">
+        <img src="logo.png" width = "200px"; height = "auto">
         <h1>ሀናን ባልትና</h1><br>
         <p><font color="red"> <h4>Your #1 Premium Products & Services. <br> የእርስዎ ተቀዳሚ ምርጫ!</h4> </font></p>
     </header>
@@ -46,13 +46,13 @@
             <form id="orderForm" action="https://formspree.io/f/mrbekdyq" method="POST">
                 <input type="hidden" name="_subject" value="New Order from Hanan Baltna">
                 <div class="form-group">
-                    <input type="text" name="name" placeholder="Full Name" required>
+                    <input type="text" name="name" placeholder="ሙሉ ስም..." required>
                 </div>
                 <div class="form-group">
-                    <input type="tel" name="phone" placeholder="Phone Number" required>
+                    <input type="tel" name="phone" placeholder="ስልክ ቁጥር..." required>
                 </div>
                 <div class="form-group">
-                    <textarea name="order-details" placeholder="Order Details..." rows="4" required></textarea>
+                    <textarea name="ሚፈልጉትን እዚህጋ ይዘዙን..." placeholder="Order Details..." rows="4" required></textarea>
                 </div>
                 <button type="submit">Place Order</button>
             </form>
@@ -80,7 +80,7 @@
     <!-- Copyright Footer -->
     <footer class="copyright">
         <p>&copy; 2024 Hanan Baltna. All rights reserved.</p>
-        <img src="log1.png" width = "100px"; height = "auto">
+        <img src="logo.png" width = "100px"; height = "auto">
     </footer>
 
     <script src="script.js"></script>
