--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <input type="tel" name="phone" placeholder="ስልክ ቁጥር..." required>
                 </div>
                 <div class="form-group">
-                    <textarea name="ሚፈልጉትን እዚህጋ ይዘዙን..." placeholder="Order Details..." rows="4" required></textarea>
+                    <textarea name="order details" placeholder="ሚፈልጉትን እዚህጋ ይዘዙን..." rows="4" required></textarea>
                 </div>
                 <button type="submit">Place Order</button>
             </form>
