--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
         <h1>Hanan Baltna</h1>
-        <img src="logo.png" width = "200px"; height = "auto">
+        <img src="log2.png" width = "200px"; height = "auto">
         <h1>ሀናን ባልትና</h1><br>
         <p><font color="red"> <h4>Your #1 Premium Products & Services. <br> የእርስዎ ተቀዳሚ ምርጫ!</h4> </font></p>
     </header>
@@ -80,7 +80,7 @@
     <!-- Copyright Footer -->
     <footer class="copyright">
         <p>&copy; 2024 Hanan Baltna. All rights reserved.</p>
-        <img src="logo.png" width = "100px"; height = "auto">
+        <img src="log2.png" width = "100px"; height = "auto">
     </footer>
 
     <script src="script.js"></script>
