--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
         <!-- Announcement Section -->
         <section class="announcement" id="announcement"></section>
 
+
+        <!-- Services/Products Section -->
+<section class="services" id="services">
+    <h2>What We Offer</h2>
+    <div class="services-grid">
+        <div class="service-card">
+            <i class="fas fa-box-open"></i>
+            <h3>Premium Products</h3>
+            <p>High-quality items sourced from trusted suppliers</p>
+        </div>
+        <div class="service-card">
+            <i class="fas fa-shipping-fast"></i>
+            <h3>Fast Delivery</h3>
+            <p>Reliable shipping within 24-48 hours</p>
+        </div>
+        <div class="service-card">
+            <i class="fas fa-headset"></i>
+            <h3>24/7 Support</h3>
+            <p>Round-the-clock customer service</p>
+        </div>
+    </div>
+</section>
+
         <!-- Product Gallery -->
         <section class="gallery">
 <img src="product1.png" width = "400px"; height = "auto">
