--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="#products" onclick="closeNav()">Products</a>
         <a href="#orderSection" onclick="closeNav()">Place Order</a>
         <a href="#contact" onclick="closeNav()">Contact</a>
+        <a href="#services" onclick="closeNav()">Services</a>
     </nav>
 
     <header>
