--- a/index.html
+++ b/index.html
@@ -38,21 +38,22 @@
         <!-- Services/Products Section -->
 <section class="services" id="services">
     <h2>What We Offer</h2>
+    <h2>የምንሰጣቸው አገልግሎቶች</h2>
     <div class="services-grid">
         <div class="service-card">
             <i class="fas fa-box-open"></i>
-            <h3>Premium Products</h3>
-            <p>High-quality items sourced from trusted suppliers</p>
+            <h3>Bundle Products</h3>
+            <p>በጅምላ ለሚያዙ ደንበኞቻችን ልዩ ቅናሽ እናደርጋለን።</p>
         </div>
         <div class="service-card">
             <i class="fas fa-shipping-fast"></i>
             <h3>Fast Delivery</h3>
-            <p>Reliable shipping within 24-48 hours</p>
+            <p>ያነጋግሩን ባሉበት እናደርሳለን።</p>
         </div>
         <div class="service-card">
             <i class="fas fa-headset"></i>
-            <h3>24/7 Support</h3>
-            <p>Round-the-clock customer service</p>
+            <h3>የእርስዎ ተቀዳሚ ምርጫ</h3>
+            <p>ስለ ጣዕምና ጥራት ምስክሮቻችን ደንበኞቻችን ናቸዉ ስለጎበኙን እናመሰግናለን!</p>
         </div>
     </div>
 </section>
