--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
+<h3>
+✔️ ዛላ ማረቆ በርበሬ 
+✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን። 
+✔️ በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።
+</h3>
     <div class="services-grid">
         <div class="service-card">
             <i class="fas fa-box-open"></i>
