--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
 <h3>
-✔️ ዛላ ማረቆ በርበሬ 
-✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን። 
+✔️ ዛላ ማረቆ በርበሬ <br>
+✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን። <br>
 ✔️ በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።
 </h3>
     <div class="services-grid">
