--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
 <h3>
-✔️ ዛላ ማረቆ በርበሬ <br>
-✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን። <br>
-✔️ በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።
+<ul>✔️ ዛላ ማረቆ በርበሬ</ul><br>
+<ul>✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</ul> <br>
+<ul>✔️ በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</ul>
 </h3>
     <div class="services-grid">
         <div class="service-card">
