--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
 <h3>
-<ol>✔️ ዛላ ማረቆ በርበሬ</ol><br>
-<ol>✔️ አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</ol> <br>
-<ol>✔️ በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</ol>
+<ol>ዛላ ማረቆ በርበሬ</ol><br>
+<ol>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</ol> <br>
+<ol>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</ol>
 </h3>
     <div class="services-grid">
         <div class="service-card">
