--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
 <h3>
-<ol>ዛላ ማረቆ በርበሬ</ol><br>
-<ol>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</ol> <br>
-<ol>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</ol>
+    <ol>
+<li>ዛላ ማረቆ በርበሬ</li><br>
+<li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
+<li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
+    </ol>
 </h3>
     <div class="services-grid">
         <div class="service-card">
