--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
-<h3>
+<section>
+    <h3>
     <ol>
 <li>ዛላ ማረቆ በርበሬ</li><br>
 <li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
 <li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
     </ol>
 </h3>
+</section>
     <div class="services-grid">
         <div class="service-card">
             <i class="fas fa-box-open"></i>
