--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
     </ol>
 </h3>
 </section>
+
+ <div class="services-grid">
+        <div class="service-card">
+            <h3>
+    <ol>
+<li>ዛላ ማረቆ በርበሬ</li><br>
+<li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
+<li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
+    </ol>
+</h3>
+        </div>
+
+
+
+    
     <div class="services-grid">
         <div class="service-card">
             <i class="fas fa-box-open"></i>
