--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
-   <div>
+   
+    <section>
+        <div>
     <ol>
 <li>ዛላ ማረቆ በርበሬ</li><br>
 <li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
@@ -47,6 +49,7 @@
     </ol>
 </h3>
         </div>
+    </section>
 
 
 
