--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         </div>
 
 
-
+ 
+    <div class="services" id=services>
+            <h3>የምንሰጣቸው አገልግሎቶች</h3>
+            <p>li>ዛላ ማረቆ በርበሬ</li><br>
+<li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
+<li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
+    </ul></p>
+        </div>
 
     
     <div class="services-grid">
