--- a/index.html
+++ b/index.html
@@ -39,21 +39,10 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
-   
-        <div>
-    <ul>
-<li>ዛላ ማረቆ በርበሬ</li><br>
-<li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
-<li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
-    </ul>
-</h3>
-        </div>
-
-
- 
+    
     <div class="services" id=services>
-            <h3>የምንሰጣቸው አገልግሎቶች</h3>
-            <p>li>ዛላ ማረቆ በርበሬ</li><br>
+            <h3></h3>
+            <p><li>ዛላ ማረቆ በርበሬ</li><br>
 <li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
 <li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
     </ul></p>
