--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
-    <section>
+    <div>
     <div class="services" id=services>
             
             <p><li>ዛላ ማረቆ በርበሬ</li><br>
@@ -47,7 +47,7 @@
 <li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
     </ul></p>
         </div>
-    </section>
+    </div>
 
     
     <div class="services-grid">
