--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <section class="services" id="services">
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
-    <div>
-    <div class="services" id=services>
+    <div
+    <div class="services" id=services>>
             
             <p><li>ዛላ ማረቆ በርበሬ</li><br>
 <li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
