--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
     <div class="services" id=services>
          <div>   
-            <p><li>ዛላ ማረቆ በርበሬ</li><br>
-<li>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</li> <br>
-<li>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</li>
-    </ul></p>
+            <p><>ዛላ ማረቆ በርበሬ</p><br>
+<p>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</p> <br>
+<p>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</p>
         </div>
     </div>
 
