--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <h2>What We Offer</h2>
     <h2>የምንሰጣቸው አገልግሎቶች</h2>
     <div class="services" id=services>
-         <div>   
-            <p><>ዛላ ማረቆ በርበሬ</p><br>
+         <section>   
+            <p>ዛላ ማረቆ በርበሬ</p><br>
 <p>አላባ ጎጃም ፤ ፀዳለና  ወዘተ የበርበሬ አይነቶች በጅምላ እና በችርቻሮ እንከፍላለን።</p> <br>
 <p>በፈለጉት መጠን ለሱቅ ለሆቴል  አዘጋጅተን ያሉበት ድረስ እናቀርባለን።</p>
-        </div>
+        </section>
     </div>
 
     
